<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ee.ut.cs.iotbazaar.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_toCamera"
            app:destination="@id/camera" />
        <action
            android:id="@+id/action_home_to_catalog"
            app:destination="@id/navigation_catalog" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ee.ut.cs.iotbazaar.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ee.ut.cs.iotbazaar.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/camera"
        android:name="ee.ut.cs.iotbazaar.ui.camera.CameraFragment"
        android:label="@string/camera"
        tools:layout="@layout/camera" >
        <action
            android:id="@+id/action_camera_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="ee.ut.cs.iotbazaar.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="ee.ut.cs.iotbazaar.ui.inbox.InboxFragment"
        android:label="Inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ee.ut.cs.iotbazaar.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="ee.ut.cs.iotbazaar.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" />
    <fragment
        android:id="@+id/qrCodeScanner"
        android:name="ee.ut.cs.iotbazaar.ui.camera.QrCodeScannerFragment"
        android:label="QR Skanner">
        <action
            android:id="@+id/action_qrCodeScanner_to_qrCodeResult"
            app:destination="@id/qrCodeResult" />
    </fragment>
    <fragment
        android:id="@+id/qrCodeResult"
        android:name="ee.ut.cs.iotbazaar.ui.camera.QrCodeResultFragment"
        android:label="QR Tulemus" />
</navigation>
